--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "truffle-box": "^1.0.5",
     "truffle-compile": "^3.0.6",
     "truffle-config": "^1.0.4",
-    "truffle-contract": "^3.0.4",
+    "truffle-contract": "git+https://github.com/colucom/truffle-contract.git",
     "truffle-contract-sources": "^0.0.1",
     "truffle-debug-utils": "^1.0.4",
     "truffle-debugger": "^2.0.0",
